<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="40dp">

    <ImageView
        android:id="@+id/user_post_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_white"
        android:contentDescription="@string/phono_contenue_dans_le_poste"
        android:src="@drawable/baseline_person_4_24" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/post_more_card_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/transparent_white"
            app:cardCornerRadius="50dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/plus_d_information_sur_l_utilisateur"
                android:src="@drawable/outline_more_vert_24" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_info_card_view"
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/transparent_white"
            app:cardCornerRadius="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="5dp"
                    app:cardBackgroundColor="@color/orange"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:id="@+id/post_user_profile_ic_image_view"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/photo_de_profile_de_l_utilisateur"
                        android:src="@drawable/baseline_person_4_24" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_user_name"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/user_pseudo_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_user_tag"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#5C000000"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/post_like_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/bouton_j_aime"
                    android:src="@drawable/baseline_like_24" />

                <Space
                    android:layout_width="4dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/post_likes_count_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_likes_number"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="0dp" />

                <ImageView
                    android:id="@+id/post_comments_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/icon_commentaire"
                    android:src="@drawable/outline_comment_24" />

                <Space
                    android:layout_width="4dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/post_comments_counts_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_comment_number"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="0dp" />

                <ImageView
                    android:id="@+id/post_shares_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/icon_de_partage"
                    android:src="@drawable/baseline_send_24" />

                <Space
                    android:layout_width="4dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/post_shares_counts_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_shares_count"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/post_comment_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:textColor="@color/white"
                android:maxLines="3"
                android:text="@string/commentaire_sample"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>